fixing alignment of nav for 980 resolution

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -4,7 +4,6 @@
     background-color: #ffffff;
     border-style: solid;
     border-color: #dddddd;
-    /* width: 99%; */
     width: 70%;
     margin-left: 15%;
     margin-right: 15%;
@@ -52,21 +51,31 @@
 
   /* Width at 980px , for desktops*/
   @media screen and (max-width: 980px) {
-    .topnav a.fullname {
+    .topnav {
+        overflow: hidden;
+        font-family: Georgia, Times, 'Times New Roman', serif;
+        background-color: #ffffff;
+        border-style: solid;
+        border-color: #dddddd;
+        width: 99%;
+        margin: 0.5%;
+     }
+     
+     .topnav a.fullname {
         float: left;
         padding-left: 1%;
         font-size: 32px;
         margin-top: 0;
-        width: 70%;
         margin-left: 15%;
-        margin-right: 15%;
     }
     
+    .contact {
+        margin-right: 15%;
+    }
     .topnav a {
         float: right;
         color: #cccccc;
         text-align: center;
-        padding-right: 15%;
         padding: 5px 5px;
         padding-top: 14px;
         padding-bottom: 14px;
